src/objects/Conversation__c.object
<CustomObject>
    <fields>
        <fullName>Created_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input2__c</fullName>
        <label>Short Input</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input__c</fullName>
        <label>Input</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Intent__c</fullName>
        <label>Intent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NLP__c</fullName>
        <label>NLP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>LUIS</fullName>
                </value>
                <value>
                    <fullName>QnA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Output__c</fullName>
        <label>Output</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Triggered_Flow__c</fullName>
        <label>Triggered Flow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visitor</label>
        <referenceTo>Visitor__c</referenceTo>
        <relationshipLabel>Conversations</relationshipLabel>
        <relationshipName>Conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Conversation</label>
    <nameField>
        <displayFormat>C{0000000}</displayFormat>
        <label>Conversation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>